# instagram-clone

./: .gitignore  pyproject.toml
insta/: main.py
insta/db/: database.py  db_post.py  db_user.py  hashing.py  models.py
insta/routers/: post.py  schemas.py  user.py
