[tool.poetry]
name = "insta"
version = "0.1.0"
description = ""
authors = ["jujemu <jujemu30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.9"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pytest = "^7.3.1"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
